--- a/面试.md
+++ b/面试.md
@@ -13,7 +13,7 @@
 1. 如何给一个元素绑定事件，如何解除绑定的事件<br><br><br><br><br>
 1. jQuery发送ajax请求有哪些常用方法，请写出一个模拟请求<br><br><br><br><br><br><br><br><br>
 1. 一个html页面中包含如下的html结构，不修改html的前提下，请写出唯一确定这个`h2`的选择器
-```
+```html
     <div>
         <h3 id="title">this is title</h3>
         <div>
