--- a/笔试2.md
+++ b/笔试2.md
@@ -1,19 +1,59 @@
 
 #笔试题目(2)
- 1. 在HTML页面中实现这样的效果：有一个表格，第一列是行号，最后一列有一个连接，点击链接删除当前行并修正行号(如果删除的是中间的行)，表格的上面和下面各有一个按钮，点击按钮会新添加一行。完成以上效果以后再加一个链接实现插入行的效果。 
+1. 在HTML页面中实现这样的效果：有一个表格，第一列是行号，最后一列有一个连接，点击链接删除当前行并修正行号(如果删除的是中间的行)，表格的上面和下面各有一个按钮，点击按钮会新添加一行。完成以上效果以后再加一个链接实现插入行的效果。 
 
- 1. 给定两个数组A,B比较它们的差别，输出哪些是共有的，哪些只有A包含，哪些只有B包含。请在一个HTML页面中实现页面上输入两个数组，点击按钮输出结果。 
+1. 给定两个数组A,B比较它们的差别，输出哪些是共有的，哪些只有A包含，哪些只有B包含。请在一个HTML页面中实现页面上输入两个数组，点击按钮输出结果。 
 
- 1. 写一个递归算法实现汉诺塔效果。你如何实现动画效果？ 
+1. 写一个递归算法实现汉诺塔效果。你如何实现动画效果？ 
 
- 1. 下个函数将所有单词首字母大写 var str="underwriting understands that in the event a change needs to be made, the change must be made to both the prior term and the renewal term. Thus creating two endorsement transactions."; 
+1. 下个函数将所有单词首字母大写 var str="underwriting understands that in the event a change needs to be made, the change must be made to both the prior term and the renewal term. Thus creating two endorsement transactions."; 
 
- 1. 找出数组中的最大值和最小值。 
+1. 找出数组中的最大值和最小值。 
 
- 1. String: 去掉字符串中的所有空格。最少两种方法。 
+1. String: 去掉字符串中的所有空格。最少两种方法。 
 
- 1. 数据库 本地建一个数据库，创建如下的表： 学生表： 学生ID，姓名，班级，年龄 课程表： 课程ID，课程名称 教师表： 教师ID，教师名称 任课表： ID，教师ID，课程ID 分数表： ID，课程ID，学生ID，分数 并为所有的表创建测试数据 
+1. 数据库 本地建一个数据库，创建如下的表： 学生表： 学生ID，姓名，班级，年龄 课程表： 课程ID，课程名称 教师表： 教师ID，教师名称 任课表： ID，教师ID，课程ID 分数表： ID，课程ID，学生ID，分数 并为所有的表创建测试数据 
 
+1. 写出下列输出结果
+```js
+var x = 20;
+var a = {
+    x: 15,
+    fn: function() {
+        var x = 30;
+        return function() {
+            return this.x;
+        };
+    }
+};
+console.log(a.fn()); //1:
+console.log((a.fn())()); //2:
+console.log(a.fn()()); //3:
+console.log(a.fn()() == (a.fn())()); //4:
+console.log(a.fn().call(this)); //5:
+console.log(a.fn().call(a)); //6:
+```
+
+1. 输出结果是什么？
+```js
+var a = {n:10,m:20};
+var b = a;
+b.n = 30;
+console.log(a.n); //1:
+console.log(b); //2:
+```
+
+1. 定义一个对象，使其拥有两个函数属性
+
+1. 写一个function，实现数组去重
+
+1. 编写一个函数fn(Number n),将数字转为大写输出，如输入123，输出一百二十三。
+
+1. 36辆自动赛车和6条跑道，没有计时器的前提下，最少用几次比赛可以筛选出最快的三辆赛车？说说你的分析过程
+
+1. 一面墙，单独工作时，A花18小时砌好，B花24小时，C花30小时，现A, B, C的顺序轮流砌，每人工作1小时换班，完工时，B总共干了多少小时?
+
+1. 写一个function求三个数的最小公倍数
 
 #html模板
 你可以用下面的代码作为模板
