--- a/笔试2.md
+++ b/笔试2.md
@@ -1,5 +1,11 @@
 
 #笔试题目(2)
+1. 请实现一个列表, 每行有行号,内容和操作3列, 添加相应的控件完成行的添加,插入和删除操作
+
+1. 完成下面的效果, 点击输入框时内容转换为数字, 失去焦点时内容变为美元金额格式($12,456,789.00)
+
+1. 请用你熟悉的两种排序算法对一个给定数组排序
+
 1. 在HTML页面中实现这样的效果：有一个表格，第一列是行号，最后一列有一个连接，点击链接删除当前行并修正行号(如果删除的是中间的行)，表格的上面和下面各有一个按钮，点击按钮会新添加一行。完成以上效果以后再加一个链接实现插入行的效果。 
 
 1. 给定两个数组A,B比较它们的差别，输出哪些是共有的，哪些只有A包含，哪些只有B包含。请在一个HTML页面中实现页面上输入两个数组，点击按钮输出结果。 
